links added for products

--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@
                         <div> </div>
                     </div>
                     <div>
+                        <span> Mobiles </span>
+                        <a href="https://dl.flipkart.com/dl//moto-e4-plus-iron-gray-32-gb/p/itmevqynuz4fwxca?pid=MOBEU9WRZHNDJANR&affid=softvars">Moto E4 Plus (Iron Gray, 32 GB)</a>
+                        <a href="https://dl.flipkart.com/dl/moto-c-plus-starry-black-16-gb/p/itmeuyd6nhzycmaa?pid=MOBEU9WRZFFUYAXJ&affid=softvars">Moto C Plus (Starry Black, 16 GB)  (2 GB RAM)</a>
+                        <a href="https://dl.flipkart.com/dl/redmi-note-4-black-64-gb/p/itmeqe48766xqzb7?pid=MOBEQ98TABTWXGTD&affid=softvars">Redmi Note 4 (Black, 64 GB)  (4 GB RAM)</a>
+
+                        <div data-WRID="WRID-149993361359020333" data-widgetType="productBanner"  data-class="affiliateAdsByFlipkart" height="240px" width="120px"></div><script async src="//affiliate.flipkart.com/affiliate/widgets/FKAffiliateWidgets.js"></script>
+
+                        <div data-WRID="WRID-149993389971884061" data-widgetType="productBanner"  data-class="affiliateAdsByFlipkart" height="240px" width="120px"></div><script async src="//affiliate.flipkart.com/affiliate/widgets/FKAffiliateWidgets.js"></script>
+                        <a href="http://amzn.to/2tKZTOS">OnePlus 5 (Slate Gray 6GB RAM + 64GB memory)</a>
+                        <a href="http://amzn.to/2vfCSBw">Honor 8 Pro (Black, 6GB RAM + 128GB Memory)</a>
+                    </div>
+                    <div>
                         <span> Electornics </span>
                         <a target="_blank" href="https://www.amazon.in/b?_encoding=UTF8&tag=softvars-21&linkCode=ur2&linkId=c580f4202e3a0232f9549840036e69f6&camp=3638&creative=24630&node=3561110031">Mobiles and Tablest</a><img
                             src="//ir-in.amazon-adsystem.com/e/ir?t=softvars-21&l=ur2&o=31" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;"
